force-app/main/default/objects/Audit_Register__c/Audit_Register__c.object-meta.xml
<CustomObject>
    <label>Audit Register</label>
    <nameField>
        <displayFormat>AUD-{00000}</displayFormat>
        <label>Audit Register Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Registers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>