force-app/main/default/objects/Audit_Register__c/fields/Audit_FeeOLD__c.field-meta.xml
<CustomField>
    <fullName>Audit_FeeOLD__c</fullName>
    <formula>Project__r.CT_Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit FeeOLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>