force-app/main/default/objects/Audit_Register__c/fields/CP_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>CP_Client_Code__c</fullName>
    <label>Client Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>