force-app/main/default/objects/Audit_Register__c/fields/CP_Filing_accounts_on_behalf__c.field-meta.xml
<CustomField>
    <fullName>CP_Filing_accounts_on_behalf__c</fullName>
    <inlineHelpText>CP Filing accounts on behalf of the client?</inlineHelpText>
    <label>CP Filing accounts on behalf?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>