force-app/main/default/objects/Audit_Register__c/fields/CP_Practice__c.field-meta.xml
<CustomField>
    <fullName>CP_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Audit Registers</relationshipLabel>
    <relationshipName>Audit_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>