force-app/main/default/objects/Audit_Register__c/fields/CW_lockdown_Date__c.field-meta.xml
<CustomField>
    <fullName>CW_lockdown_Date__c</fullName>
    <label>CW lockdown Date</label>
    <type>Date</type>
</CustomField>