force-app/main/default/objects/Audit_Register__c/fields/Date_Accounts_Sent_to_Companies_House__c.field-meta.xml
<CustomField>
    <fullName>Date_Accounts_Sent_to_Companies_House__c</fullName>
    <label>Date Accounts Sent to Companies House</label>
    <type>Date</type>
</CustomField>