force-app/main/default/objects/Audit_Register__c/fields/Date_acknowledgement_received__c.field-meta.xml
<CustomField>
    <fullName>Date_acknowledgement_received__c</fullName>
    <inlineHelpText>Date acknowledgement received from Companies House</inlineHelpText>
    <label>Date acknowledgement received</label>
    <type>Date</type>
</CustomField>