force-app/main/default/objects/Audit_Register__c/fields/Date_submitted_online_via_CaseWare__c.field-meta.xml
<CustomField>
    <fullName>Date_submitted_online_via_CaseWare__c</fullName>
    <label>Date submitted online via CaseWare</label>
    <type>Date</type>
</CustomField>