force-app/main/default/objects/Audit_Register__c/fields/Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount__c</fullName>
    <inlineHelpText>This is for Pensions only</inlineHelpText>
    <label>Investment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>