force-app/main/default/objects/Audit_Register__c/fields/Length_of_RI_Service__c.field-meta.xml
<CustomField>
    <fullName>Length_of_RI_Service__c</fullName>
    <label>Length of RI Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>