force-app/main/default/objects/Audit_Register__c/fields/Year_End__c.field-meta.xml
<CustomField>
    <fullName>Year_End__c</fullName>
    <label>Year End</label>
    <type>Date</type>
</CustomField>