force-app/main/default/objects/Audit_Register__c/fields/Year_EndOld__c.field-meta.xml
<CustomField>
    <fullName>Year_EndOld__c</fullName>
    <formula>Project__r.CT_Year_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year EndOLD</label>
    <type>Date</type>
</CustomField>